--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,4 @@
 :root {
-	--black-square-color: black;
-	--white-square-color: gray;
+	--black-square-color: lightgray;
+	--white-square-color: white;
 }
